--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,11 +1,43 @@
 nav {
-  height: 500px;
+  height: 10vh;
   width: 100vw;
   background-color: blue;
+  position: fixed;
+  z-index: 100;
+}
+
+img {
+  width: 100vw;
+}
+
+section {
+  border: 1px solid green;
+  margin-bottom: 110px;
+  text-align: center;
+  scroll-snap-align: center;
+  padding-top: 15px;
+}
+
+#s1 {
+  padding-top: 300px;
+  margin-bottom: 80px;
+}
+
+h1 {
+  margin: 0px;
+  position: relative;
+  top: -40px;
+}
+
+.out-of-focus {
+  transform: scale(0.8);
+  filter: blur(5px);
+  opacity: 0.5;
 }
 
 html, body {
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-snap-type: y mandatory;
 }/*# sourceMappingURL=index.css.map */
