--- a/PGSelection/CSS/index.css
+++ b/PGSelection/CSS/index.css
@@ -11,10 +11,11 @@ img {
 }
 
 section {
-  border: 1px solid green;
-  margin-bottom: 110px;
+  width: 320px;
+  margin-bottom: 100px;
   text-align: center;
   scroll-snap-align: center;
+  scroll-snap-stop: always;
   padding-top: 15px;
 }
 
@@ -23,16 +24,26 @@ section {
   margin-bottom: 80px;
 }
 
+.foods {
+  transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out, filter 0.6s ease-in-out;
+}
+
 h1 {
   margin: 0px;
   position: relative;
   top: -40px;
 }
 
-.out-of-focus {
-  transform: scale(0.8);
+.foods.active {
+  transform: scale(1);
+  filter: blur(0);
+  opacity: 1;
+}
+
+.foods.inactive {
+  transform: scale(0.9);
   filter: blur(5px);
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 html, body {
